--- a/Serv/TestsWebApp/Repository/Repository.csproj
+++ b/Serv/TestsWebApp/Repository/Repository.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
