--- a/Serv/TestsWebApp/Controllers/Controllers.csproj
+++ b/Serv/TestsWebApp/Controllers/Controllers.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.38" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.15" />
   </ItemGroup>
 
   <ItemGroup>
