--- a/Serv/TestsWebApp/TestsWebApp/appsettings.json
+++ b/Serv/TestsWebApp/TestsWebApp/appsettings.json
@@ -8,6 +8,10 @@
   "ConnectionStrings": {
     "sqlConnection": "Host=localhost; Port=5432; database=testsapp; Username=postgres ;Password=password "
   },
+  "JwtSettings": {
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:5001"
+  },
   "AllowedHosts": "*"
 }
 //Integrated Security=true; Trusted_Connection=True;TrustServerCertificate=False; Encrypt=False;
